# transfer

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose-prom.yaml  docker-compose.yaml  fixture.json  haproxy.cfg  minio.md  nginx.conf  prometheus.yml  test.py  vmagent-config.yml  Встреча
cleaner/: Dockerfile  Makefile  README.md  all.py  cleaner.py  conf.md  config.yaml  cron.sh  dev.py  docker-compose.yaml  prefix.py  pyproject.toml  r1.py  reg.py  requirements.txt  test.yaml  universal.py
cleaner/app/: cleaner.py  config.py  main.py  nexus_api.py
cleaner/configs/: config.yaml  reg-config.yaml
cleaner/configs/test/: test2.yaml
cleaner/logs/: cleaner.log.2025-05-16  cleaner.log.2025-05-20
cleaner/reset/: clean_default.py  clear_all.py  doc.sh  push.sh  r1.sh
cleaner/tests/: test_api_nexus.py  test_clean.py  test_cleaner.py  test_cleaner_default.py  test_dev.py  test_reg.py
metrics_py/: .dockerignore  Dockerfile  blobs.py  blobs_size.py  config.py  db.py  docker_tags.py  docker_tags_metrics.py  hostedrepo_status.py  main.py  makefile  proxyrepo_status.py  pyproject.toml  repo_size.py  repo_status.py  repositories.py  repositories_status.py  repositories_storage.py  requirements.txt  test.py
metrics_py/database/: repository_query.py  tags_query.py
metrics_py/db/: db.py  repository_query.py  tags_query.py
metrics_py/metrics/: blobs_size.py  docker_tags.py  proxyrepo_status.py  repo_size.py  tasks.py
metrics_py/metrics/utlis/: tasks.py  url.py
metrics_py/test/: test_nexus_docker_tags.py  test_nexus_task.py  test_task.py
(+1326 files in other folders)
