[project]
name = "metrics-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.37.19",
    "dotenv>=0.9.9",
    "humanize>=4.12.2",
    "prometheus-client>=0.21.1",
    "requests>=2.32.3",
    "url-normalize>=1.4.3",
]
